--- a/StoryFinder/app/src/main/res/values/strings.xml
+++ b/StoryFinder/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="story_title_label">Title</string>
+    <string name="genre_label">Title</string>
+    <string name="runtime_label">Title</string>
+    <string name="rating_label">Title</string>
+    <string name="language_label">Title</string>
     <string name="story_details_label">Details</string>
     <string name="search_title">Search...</string>
 
